# testing-something

CT/: .gitignore  Cargo.toml  README.md
CT/output/: output_graph.dot
CT/src/: graph.rs  main.rs  parser.rs  type_checker.rs
